--- a/css/estilo.css
+++ b/css/estilo.css
@@ -130,6 +130,8 @@ nav .menu-principal:hover{
 #trabalhos-realizados img{
     width: 400px;
     height: 250px;
+    border-radius: 15px;
+    box-shadow: 0px 0px 16px 5px rgba(0, 0, 0, 0.25);
 }
 
 #trabalhos-realizados img:hover{
@@ -187,6 +189,13 @@ nav .menu-principal:hover{
 @media (max-width :767px){
     #info-autor .caixa-direita{
         margin: 0;
+    }
+
+}
+@media (min-width :767.9px){
+
+    #trabalhos-realizados h3{
+        text-align: center;
     }
 
 }
